--- a/Externals/Common.props
+++ b/Externals/Common.props
@@ -1,6 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?> 
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ImportGroup Label="PropertySheets" />
+  <ImportGroup Label="PropertySheets">
+    <Import Project="Alicorn\Lib.props" />
+    <Import Project="Externals\Boost\1.59\Lib.props" />
+    <Import Project="Externals\Boost\Boost.Dll.20150822\Lib.props" />
+    <Import Project="Externals\GUI\GUI.props" />
+    <Import Project="Externals\Poco\1.6.1\Lib.props" />
+    <Import Project="Externals\Test\Google Test\GoogleTest.props" />
+    <Import Project="Externals\Utf8cpp\2.3.4\Lib.props" />
+    <Import Project="Externals\Xml\Xml.props" />
+  </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup />
   <ItemDefinitionGroup />
