Добавлена ссылка на Testing.
git-svn-id: file:///E/Repository/Example.Documentation/trunk@5 a365ddb6-76be-9f42-b586-fd62945542ec

--- a/Externals/Common.props
+++ b/Externals/Common.props
@@ -9,6 +9,7 @@
     <Import Project="Externals\Test\Google Test\GoogleTest.props" />
     <Import Project="Externals\GUI\GUI.props" />
     <Import Project="Alicorn\Lib.props" />
+    <Import Project="Testing\Testing.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup />
