--- a/Externals/Common.props
+++ b/Externals/Common.props
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets">
+    <Import Project="Testing\Testing.props" />
     <Import Project="Alicorn\Lib.props" />
     <Import Project="Externals\GUI\GUI.props" />
     <Import Project="Externals\Test\Google Test\GoogleTest.props" />
