--- a/Solution/Solution/Externals/Externals.Android.props
+++ b/Solution/Solution/Externals/Externals.Android.props
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets">
+    <Import Project="Externals\Externals.props" />
     <Import Project="Properties\Android.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup />
-  <ItemDefinitionGroup />
+  <ItemDefinitionGroup>
+    <Link>
+      <IgnoreSpecificDefaultLibraries />
+    </Link>
+  </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
