--- a/Solution/Solution.x64.props
+++ b/Solution/Solution.x64.props
@@ -1,10 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets">
-    <Import Project="Properties\Windows.props" />
-    <Import Project="Externals\Externals.Windows.props" />
-    <Import Project="Alicorn\Lib.props" />
-    <Import Project="Testing\Testing.props" />
+    <Import Project="Solution\Externals\Externals.Windows.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup />
