--- a/Solution/Solution/Externals/Externals.Android.props
+++ b/Solution/Solution/Externals/Externals.Android.props
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets">
     <Import Project="Properties\Android.props" />
-    <Import Project="Externals\Externals.props" />
+    <Import Project="Externals\Externals.Android.props" />
     <Import Project="Alicorn\Lib.props" />
     <Import Project="Testing\Testing.props" />
   </ImportGroup>
