--- a/Solution/Solution/Externals/Externals.Windows.props
+++ b/Solution/Solution/Externals/Externals.Windows.props
@@ -7,7 +7,9 @@
     <Import Project="Testing\Testing.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup>
+    <IncludePath>$(SolutionDir)Solution\Solution;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup />
   <ItemGroup />
 </Project>
